hard-gists/4656144/run.log
=== Docker Run Log for 4656144 ===
Started at: Mi 29. Okt 14:57:09 CET 2025

[2025-10-29 14:57:10] START: Running container for 4656144
[2025-10-29 14:57:10] SUCCESS: Container c1139a2a9c1b2860ed853a8ba4597fcf5d925aa203964aeda1fdde4427391305 started for 4656144
=== Container logs for 4656144 ===
  File "/snippet.py", line 15
    print '%s %ss' % (self.message or 'Took', time.time() - self.i)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4656144 ===
[2025-10-29 14:57:12] INFO: Container c1139a2a9c1b2860ed853a8ba4597fcf5d925aa203964aeda1fdde4427391305 has stopped
